--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -207,6 +207,43 @@
   .navbar-collapse {
     z-index: 999;
   }
+
+  .drop-down-items{
+    position: absolute;
+    width:185px;
+    height: 168px;
+    background-color: #fff;
+    border: 1px solid rgba(104, 112, 134, 0.1);
+    box-sizing: border-box;
+    box-shadow: 0px 10px 40px -5px rgba(89, 102, 132, 0.12);
+    border-radius: 8px;
+    padding: 14px;
+    margin-top: 12px;
+    border-radius: 8px;
+    margin-left: 45px;
+  }
+  .cursor{
+    cursor: pointer;
+  }
+  .list-items{
+    list-style-type: none;
+    height: 38px;
+    width:182px;
+    margin-left: -13px;
+    padding-left: 14px;
+    padding-top: 7px;
+  }
+  .go-to-links{
+    font-family: 'Nunito',sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    color: #687086;   
+  }
+  .list-items:hover{
+    background-color: #F7F9FB;
+  }
 }
 .navbar-expand-lg .navbar-nav .nav-link {
   padding-left: 0 !important;
