--- a/src/components/Cards/styles.scss
+++ b/src/components/Cards/styles.scss
@@ -119,6 +119,14 @@
       padding-right: 20px;
       color: $white;
     }
+
+    &.email {
+      &:hover {
+        background-image: none;
+        background-position: center;
+        padding-right: 0;
+      }
+    }
   }
 
   .remote {
