--- a/src/components/EmailForm/styles.scss
+++ b/src/components/EmailForm/styles.scss
@@ -1,139 +1,69 @@
-
 @import '../../styles/variables/colors.scss';
 @import '../../styles/variables/mixins.scss';
 
-.appplication-form{
-  width:764px;
-  margin-left: 310px;
+.application-form {
   border-width: 1px solid grey;
   box-shadow: 0px 10px 40px -5px rgba(89, 102, 132, 0.12);
   padding-bottom: 15px;
   margin-bottom: 30px;
+  padding: 0 36px 60px;
+  width: 724px;
+  margin: auto;
 
-  @include mobile{
-    width: 100%;
-    margin-left: 0px;
+  @include mobile {
+    width: 94%;
+    margin: 12px;
+    padding: 0 20px 20px;
   }
-}
 
-.label{
-  text-align: left;
-  font-family: 'Nunito', sans-serif;
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 150%;
-/* identical to box height, or 24px */
-margin-left: 36px;
-letter-spacing: 0.01em;
-margin-bottom: 5px;
-color: #1E2432;
-}
-
-.form-body{
-  width:690px;
-  padding-top: 35px;
-  height: 80px;
-
-  @include mobile{
-    width: 80%;
+  .label {
+    text-align: left;
+    font-family: 'Nunito', sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 150%;
+    letter-spacing: 0.01em;
+    margin-bottom: 5px;
+    color: #1e2432;
+    padding-top: 42px;
   }
-}
-input[type="text"]{
-  background-color: #F7F9FB;
-  border-radius: 4px;
-  border-width: 0px;
-  margin-left: 36px;
-}
-.submit-application{
-width: 241px;
-height: 40px;
 
-background: #2D66FE;
-border-radius: 4px;
-outline: none;
-color: #fff;
-border-width: 0px;
-
-@include mobile{
-  align-self: center;
-}
-}
-.submit-application-unfilled{
-  width: 241px;
-  height: 40px;
-  
-  background: #687086;
-  border-radius: 4px;
-  outline: none;
-  color: #fff;
-  border-width: 0px;
-  
-  @include mobile{
-    align-self: center;
+  .form-body {
+    @include mobile {
+      width: 100%;
+    }
   }
+
+  .submit-application {
+    width: 241px;
+    height: 40px;
+    background: #2d66fe;
+    border-radius: 4px;
+    outline: none;
+    color: #fff;
+    border-width: 0px;
+
+    @include mobile {
+      align-self: center;
+    }
+
+    &.unfilled {
+      background: #687086;
+    }
   }
-.file-input::-webkit-file-upload-button {
-  visibility: hidden;
-  outline: none;
-}
 
-.file-input::before {
-  content: 'Upload Your Resume';
-  padding: 5px 8px;
-  outline: none;
-  display: inline;
-  cursor: pointer;
-  font-weight: 700;
-  font-size: 10pt;
-  color: #2D66FE;
-  font-family: 'Nunito', sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 150%;
-  text-align: center;
-  letter-spacing: 0.01em;
-  overflow: hidden;
-  position: relative;
-  margin-left: 28px;
-}
+  .button-bottom {
+    margin-top: 60px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 
-.file-input:hover::before {
-  border-color: transparent;
-  outline: none;
-}
-.file-input:active::before {
-  background-color: #F7F9FB;
-  outline: none;
-  border-color: transparent;
-}
-
-.upload-text{
-  font-size:9px;
-   color:grey;
-   text-align:'left';
-   margin-left:35px;
-   margin-top:4px;
-}
-.button-bottom{
-  align-self:'right';
-  margin-left: 32px;
-  margin-top: 60px;
-  margin-bottom: 15px;
-
-  @include mobile{
-    align-self: 'center';
+    @include mobile {
+      justify-content: center;
+    }
   }
-}
 
-.validation{
-  text-align: left;
-  font-family: 'Nunito', sans-serif;
-font-style: normal;
-font-weight: normal;
-font-size: 11px;
-margin-left: 37px;
-color: red;
-margin-top: 5px;
+  .asterisk {
+    color: red;
+  }
 }
