--- a/src/components/JobDescription/styles.scss
+++ b/src/components/JobDescription/styles.scss
@@ -1,30 +1,28 @@
 @import '../../styles/variables/colors.scss';
 @import '../../styles/variables/mixins.scss';
 
+.job-description-card {
+  position: relative;
+  padding-top: 40px;
+  width: 1128px;
+  margin: auto;
 
-.job-description-card{
-    position: relative;
-    padding-top: 40px;
-    padding-left: 310px;
+  @include mobile {
+    padding: 40px 12px 20px;
+    width: 100%;
+  }
 
-    @include mobile {
-        padding-left: 75px;
-        padding-top: 10px;
-      }
-}
-
-.heading{
-    font-family:'Poppins', sans-serif;
+  .heading {
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 30px;
     line-height: 120%;
-    color: #1E2432;
+    color: #1e2432;
     margin-bottom: 25px;
-}
+  }
 
-.description-text{
-    width:764px;
+  .description-text {
     margin-top: 10px;
     font-family: 'Nunito', sans-serif;
     font-style: normal;
@@ -34,17 +32,14 @@
     color: #687086;
     max-lines: 1;
     display: flex;
-    @include mobile{
-        width: 200px;
-    }
+  }
 
-}
-
-.readMore{
+  .readMore {
     background-color: transparent;
     color: #000;
     padding: 0px;
     border-width: 0px;
     margin-left: 6px;
     font-size: 16px;
+  }
 }
