--- a/src/components/PrimaryInput/styles.scss
+++ b/src/components/PrimaryInput/styles.scss
@@ -10,17 +10,18 @@
   .input-item {
     width: 100%;
     padding: 12px 20px;
-    border: 1px solid grey;
+    border: none;
     border-radius: 0.35rem;
     font-family: 'Inter', sans-serif;
-    font-size: 0.85rem;
+    font-size: 14px;
     font-weight: 400;
     line-height: 20px;
-    color: grey;
-    background: #fff;
+    color: #687086;
+    background: #f7f9fb;
     box-sizing: border-box;
     -webkit-appearance: none;
     position: relative;
+    border: none;
 
     &:focus {
       border-color: #000;
@@ -28,8 +29,7 @@
     }
 
     &.btn-inactive {
-      background-color: #fff;
-      border-color: rgba(grey, 0.6);
+      background: #f7f9fb;
 
       @include desktop {
         border-color: rgba(grey, 0.6);
@@ -45,7 +45,7 @@
     }
 
     &::placeholder {
-      font-size: 0.75rem;
+      font-size: 13px;
     }
   }
 
