--- a/src/containers/EmailModule/styles.scss
+++ b/src/containers/EmailModule/styles.scss
@@ -1,9 +1,8 @@
-
 @import '../../styles/variables/colors.scss';
 @import '../../styles/variables/mixins.scss';
 
 .email-page-style {
-    height: 100vh;
+  height: 100vh;
 
   .header-banner {
     max-width: 1128px;
@@ -12,42 +11,26 @@
     padding: 2px 0px 20px 0px;
 
     @include mobile {
-      padding: 0px 12px 64px 12px;
-      
+      padding: 0px 12px 20px 12px;
     }
   }
 
-  .body-card{
-    width: 100%;
-    display: block;
-    margin: auto;
+  .apply-text-form {
+    padding-top: 40px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 54px;
+    color: #1e2432;
+    margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @include mobile {
+      padding-top: 10px;
+      font-size: 20px;
+      margin-bottom: 0;
+    }
   }
-  @include mobile {
-    padding: 0px 12px 64px 12px;
-  }
-
-
-
-.apply-text-form{
-  position: relative;
-  padding-top: 40px;
-  padding-left: 310px;
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 30px;
-  line-height: 54px;
-  color: #1E2432;
-  margin-bottom: 50px;
-  margin-top: -20px;
-
-  @include mobile {
-    padding-left: 75px;
-    padding-top: 10px;
-    font-size: 20px;
-    
-
-  }
-}
-
 }
