--- a/src/components/SelectInput/styles.scss
+++ b/src/components/SelectInput/styles.scss
@@ -7,37 +7,33 @@
 
 //select-primary
 .select-input {
-  width: 100%;
+  width: 330px;
   position: relative;
 
-  //header-title
   .header-title {
-    width: 100%;
     border: 0;
-    font-family: 'Inter', sans-serif;
-    font-size: 0.85rem;
+    font-family: 'Nunito', sans-serif;
+    font-size: 14px;
     font-weight: 400;
-    //color: $secondary;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
   }
 
-  //list-header
   .list-header {
-    font-family: 'Inter', sans-serif;
-    font-size: 0.8rem;
-    //color: rgba($secondary, 0.8);
+    font-family: 'Nunito', sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 0.25rem;
-    background-color: $white;
     padding: 0.5rem 1rem;
-    //border: 1px solid rgba($secondary, 0.6);
+    font-size: 16px;
     cursor: pointer;
     height: 37px;
-
+    background: #FFFFFF;
+    border: 1px solid #2F80ED;
+    box-sizing: border-box;
+    border-radius: 8px;
+    
     &:focus {
       //border-color: $black;
       outline: none;
@@ -48,36 +44,37 @@
   .list {
     position: absolute;
     z-index: 9999;
-    overflow-y: scroll;
     padding: 0;
     list-style-type: none;
-    margin-top: 0.5rem;
-    width: 100%;
-    height: 200px;
+    margin-top: 20px;
+    width: 330px;
     border-radius: 7px;
-    //box-shadow: 0 4px 10px 0 rgba($black, 0.15);
-    //background-image: linear-gradient(to bottom, $white 64%, rgba($white, 0.99)),
-    //linear-gradient(to bottom, $white, $white);
+    background-color: #fff;
+    background: #FFFFFF;
+    border: 1px solid rgba(104, 112, 134, 0.1);
+    box-sizing: border-box;
+    border-radius: 8px;
+
+    :hover{
+      background-color:#F7F9FB;
+    }
+
+    @include mobile{
+      width: 100%;
+    }
   }
 
   //list-item
   .list-item {
     padding: 0.7rem 0 0.7rem 0.7rem;
-    //border-bottom: 1px solid $gray;
-    font-family: 'Inter', sans-serif;
-    font-size: 0.75rem;
-    //color: $secondary;
+    font-family: 'Nunito', sans-serif;
     cursor: pointer;
-
-    // &:hover,
-    // &:active {
-    //   //background-color: $gray;
-    // }
+    font-size: 14px;
   }
 
   //item-info
   .item-info {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Nunito', sans-serif;
     font-size: 0.8rem;
     font-weight: 400;
   }
@@ -90,16 +87,60 @@
 
   //title
   .title {
-    font-family: 'Inter', sans-serif;
-    font-size: 0.73rem;
-    letter-spacing: -0.1px;
-    color: rgba($black, 0.7);
+    font-family: 'Nunito',sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #687086;
   }
+  .chevron{
+    width:20px;
+    height: 20px;
+    margin-top: 0px;
+    margin-right: 20px;
+    
+  }
+  .filter-body{
+    justify-content: space-between;
+    display: flex;
+    margin-top: 13px;
+    width:330px;
+    @include mobile{
+      width:100%;
+    }
+  }
+  .filter-desc{
+    display: flex;
+    justify-content: space-between;
+    width: 330px;
+    @include mobile{
+      width:100%;
+    }
+  }
+  .experience{
+    font-family: 'Nunito',sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+    color: #1E2432;
 
-  // .error {
-  //   //color: $red;
-  // }
-
+  }
+  .clear{
+    font-family: 'Nunito',sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 100%;
+    text-align: right;
+    color: #2D66FE;
+    outline: none;
+    border: 0px;
+    background-color: transparent;
+    margin-top: -8px;
+  }
   .status-list-image {
     display: flex;
 
@@ -111,5 +152,10 @@
       //color: $secondary;
       cursor: pointer;
     }
+  }
+
+  @include mobile{
+    width: 100%;
+    margin-top: 20px;
   }
 }
