--- a/src/containers/Home/styles.scss
+++ b/src/containers/Home/styles.scss
@@ -185,7 +185,7 @@
   .filters{
     display:flex;
     justify-content: space-between;
-
+    margin-bottom: 35px;
     @include mobile {
       display: block;
     }
@@ -265,6 +265,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 35px;
 
     @include mobile {
       flex-direction: column;
