--- a/src/components/AssignmentDescription/styles.scss
+++ b/src/components/AssignmentDescription/styles.scss
@@ -3,38 +3,60 @@
 @import '../../styles/variables/mixins.scss';
 
 .detail-banner-style {
-    max-width: 1128px;
+    
     display: flex;
-    margin: auto;
-    padding: 2px 0px 0px 0px;
-    margin-top: 20px;
+    justify-content: center;
+    margin-top: 36px;
 
     @include mobile {
       padding: 0px 12px 64px 12px;
     }
   }
-
+  .page-body{
+    display: block;
+    justify-content: center;
+  }
+  .similar-jobs{
+    
+  }
   .description-text{
       width: 705px;
       display: block;
+
       @include mobile{
           width: 100%;
       }
   }
 
-  .summary{
-    font-family: 'Poppins',sans-serif;
+  .company-name{
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 120%;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 54px;
     color: #1E2432;
+    display: flex;
+    justify-content: center;
+    margin-top: 36px;
   }
-  .summary-text{
-    font-family: 'Nunito',sans-serif;
+  .summary{    
+    font-family: Poppins;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    color: #1E2432;
+    margin-top: 72px;
+  }
+  .summary-text{
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 36px;
+    margin-top: 30px;
     color: #687086;
 
     @include mobile{
@@ -51,6 +73,7 @@
     letter-spacing: 5px;
     text-transform: uppercase;    
     color: #687086;
+    margin-top: 60px;
   }
   .similar-jobs{
       margin-left: 100px;
