--- a/src/containers/EmailModule/styles.scss
+++ b/src/containers/EmailModule/styles.scss
@@ -14,7 +14,40 @@
       padding: 0px 12px 20px 12px;
     }
   }
-
+  .body-card-description{
+    display: flex;
+    justify-content: center;
+  }
+  .complete-header{
+    background-color:#32ACB1;
+  }
+  .position-title{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 54px;
+    color: #1E2432;
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+  }
+  .job-detail{
+    font-family: 'Nunito',sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 100%;
+    color: #687086;
+    background: #F7F9FB;
+    border-radius: 25px;
+    margin-right: 5px;
+  }
+  .job-container{
+    display: flex;
+    padding: 5px;
+    justify-content: center;
+  }
   .apply-text-form {
     padding-top: 40px;
     font-family: 'Poppins', sans-serif;
