--- a/src/components/SelectInput/styles.scss
+++ b/src/components/SelectInput/styles.scss
@@ -29,14 +29,14 @@
     font-size: 16px;
     cursor: pointer;
     height: 37px;
-    background: #FFFFFF;
-    border: 1px solid #2F80ED;
+    background: #ffffff;
+    border: 1px solid rgba(104, 112, 134, 0.1);
     box-sizing: border-box;
     border-radius: 8px;
-    
+
     &:focus {
-      //border-color: $black;
-      outline: none;
+      border-color: #2f80ed;
+      outline: 1px solid #2f80ed;
     }
   }
 
@@ -50,16 +50,17 @@
     width: 330px;
     border-radius: 7px;
     background-color: #fff;
-    background: #FFFFFF;
+    background: #ffffff;
     border: 1px solid rgba(104, 112, 134, 0.1);
+    box-shadow: 0px 10px 40px -5px rgba(89, 102, 132, 0.12);
     box-sizing: border-box;
     border-radius: 8px;
 
-    :hover{
-      background-color:#F7F9FB;
+    :hover {
+      background-color: #f7f9fb;
     }
 
-    @include mobile{
+    @include mobile {
       width: 100%;
     }
   }
@@ -87,7 +88,7 @@
 
   //title
   .title {
-    font-family: 'Nunito',sans-serif;
+    font-family: 'Nunito', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -95,47 +96,45 @@
     text-align: center;
     color: #687086;
   }
-  .chevron{
-    width:20px;
+  .chevron {
+    width: 20px;
     height: 20px;
     margin-top: 0px;
     margin-right: 20px;
-    
   }
-  .filter-body{
+  .filter-body {
     justify-content: space-between;
     display: flex;
     margin-top: 13px;
-    width:330px;
-    @include mobile{
-      width:100%;
+    width: 330px;
+    @include mobile {
+      width: 100%;
     }
   }
-  .filter-desc{
+  .filter-desc {
     display: flex;
     justify-content: space-between;
     width: 330px;
-    @include mobile{
-      width:100%;
+    @include mobile {
+      width: 100%;
     }
   }
-  .experience{
-    font-family: 'Nunito',sans-serif;
+  .label {
+    font-family: 'Nunito', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
     line-height: 27px;
-    color: #1E2432;
-
+    color: #1e2432;
   }
-  .clear{
-    font-family: 'Nunito',sans-serif;
+  .clear {
+    font-family: 'Nunito', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 12px;
     line-height: 100%;
     text-align: right;
-    color: #2D66FE;
+    color: #2d66fe;
     outline: none;
     border: 0px;
     background-color: transparent;
@@ -154,7 +153,7 @@
     }
   }
 
-  @include mobile{
+  @include mobile {
     width: 100%;
     margin-top: 20px;
   }
