--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -33,7 +33,7 @@ $btn-danger: #ff6e6e;
 // Color Shades (Theme Based - Xclusive)
 $theme-primary: #1e2432;
 $theme-secondary: #687086;
-$btn-color: #2d66fe;
+$btn-color: #1b48bb;
 
 $theme-success: #61b23b;
 $theme-info: #9c6dff;
