--- a/src/components/AssignmentDescription/styles.scss
+++ b/src/components/AssignmentDescription/styles.scss
@@ -1,125 +1,190 @@
+
 @import '../../styles/variables/colors.scss';
 @import '../../styles/variables/mixins.scss';
 
 .detail-banner-style {
-  max-width: 1128px;
-  display: flex;
-  margin: auto;
-  padding: 2px 0px 0px 0px;
-  margin-top: 20px;
+    
+    display: flex;
+    justify-content: center;
+    margin-top: 36px;
 
-  @include mobile {
-    padding: 0px 12px 64px 12px;
-  }
-
-  .description-text {
-    width: 705px;
-    display: block;
     @include mobile {
-      width: 100%;
+      padding: 0px 12px 64px 12px;
     }
   }
+  .page-body{
+    display: block;
+    justify-content: center;
+  }
+  .description-text{
+      width: 705px;
+      display: block;
 
-  .summary {
+      @include mobile{
+          width: 100%;
+      }
+  }
+
+  .company-name{
     font-family: 'Poppins', sans-serif;
     font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 120%;
-    color: #1e2432;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 54px;
+    color: #1E2432;
+    display: flex;
+    justify-content: center;
+    margin-top: 36px;
   }
-  .summary-text {
-    font-family: 'Nunito', sans-serif;
+  .summary{    
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    color: #1E2432;
+    margin-top: 72px;
+  }
+  .summary-text{
+    font-family: Nunito;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 36px;
-    margin-top: 30px;
+    margin-top: 12px;
     color: #687086;
+
+    @include mobile{
+        font-size: 14px;
+    }
+  }
+  .summary-para {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    margin-bottom: 0;
+    color: $theme-secondary;
 
     @include mobile {
       font-size: 14px;
     }
   }
 
-  .sub-headings {
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    font-weight: 600;
+  .purposes-para {
+    margin-top: 16px;
+    font-weight: 400;
     font-size: 18px;
-    line-height: 27px;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    color: #687086;
-    margin-top: 60px;
-  }
-  .similar-jobs {
-    margin-left: 100px;
-    margin-top: 15px;
+    font-family: 'Nunito', sans-serif;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    color: $theme-secondary;
+    overflow: hidden;
 
     @include mobile {
-      width: 30%;
-      margin-right: 5px;
-      margin-left: 5px;
+      font-size: 14px;
+      line-height: 150%;
     }
+  }
 
-    .jobs-at {
+
+
+  .sub-headings{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;    
+    letter-spacing: 5px;
+    text-transform: uppercase;    
+    color: #687086;
+    margin-top: 48px;
+  }
+  .jobs-at{
       font-family: 'Poppins', sans-serif;
       font-style: normal;
       font-weight: 600;
       font-size: 18px;
       line-height: 27px;
       letter-spacing: 5px;
-      text-transform: uppercase;
+      text-transform: uppercase;        
       color: #687086;
+      margin-left: 120px;
     }
-    .position {
-      width: 233px;
-      height: 58px;
-      padding: 12px 18px;
-      font-family: 'Poppins', sans-serif;
-      font-style: normal;
-      font-weight: bold;
-      font-size: 24px;
-      line-height: 120%;
-      color: #1e2432;
-    }
-    .job-details {
-      width: 350px;
-      height: 219px;
-      background: #ffffff;
-      border: 1px solid rgba(104, 112, 134, 0.1);
-      box-sizing: border-box;
-      border-radius: 8px;
-    }
-
-    .job-description {
+  .similar-jobs{
+      margin-left: 100px;
+      margin-top: 15px;
       display: flex;
-      color: #687086;
-      margin-left: 18px;
+      
+      @include mobile{
+          width: 30%;
+          margin-right: 5px;
+          margin-left: 5px;
+      }
+
+      .jobs-at{
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: 5px;
+        text-transform: uppercase;        
+        color: #687086;
+        margin-top: 15px;
+      }
+      .position{
+        width: 233px;
+        height: 58px;
+        padding: 12px 18px;       
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 120%;
+        color: #1E2432;
+        
+      }
+      .job-details{
+        width: 350px;
+        height: 219px;        
+        background: #FFFFFF;
+        border: 1px solid rgba(104, 112, 134, 0.1);
+        box-sizing: border-box;
+        border-radius: 8px;
+      }
+
+      .job-description{
+          display: flex;   
+          color: #687086;
+          margin-left: 18px;     
+      }
+      .work-detail-icon{
+        margin-top: -13px;
+        width:12px;
+     }
+       .work-detail{
+            font-size:12px;
+            margin-top: 0px;
+            margin-left: 5px;
     }
-    .work-detail-icon {
-      margin-top: -13px;
-      width: 12px;
+        .apply-now{
+            width: 102px;
+            font-family: 'Nunito',sans-serif;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 100%;
+            color: #2D66FE;
+            border: 1px solid #2D66FE;
+            box-sizing: border-box;
+            border-radius: 4px;
+            margin-left: 18px;
+            padding: 10px 18px;
+
     }
-    .work-detail {
-      font-size: 12px;
-      margin-top: 0px;
-      margin-left: 5px;
-    }
-    .apply-now {
-      width: 102px;
-      font-family: 'Nunito', sans-serif;
-      font-style: normal;
-      font-weight: 600;
-      font-size: 12px;
-      line-height: 100%;
-      color: #2d66fe;
-      border: 1px solid #2d66fe;
-      box-sizing: border-box;
-      border-radius: 4px;
-      margin-left: 18px;
-      padding: 10px 18px;
-    }
+    
   }
-}
+
+  
