--- a/src/components/AssignmentTitles/styles.scss
+++ b/src/components/AssignmentTitles/styles.scss
@@ -5,12 +5,13 @@
 .banner-styles {
     display: flex;
     justify-content: center;
-    height: 350px;
+    height: 230px;
     resize: contain;
     
     
     @include mobile {
       padding: 0px 12px 64px 12px;
+      height: 150px;
     }
   }
 
@@ -30,12 +31,16 @@
     height: 100px;
     margin-bottom: 30px;
     display: block;
-    margin-top: 305px;
-    box-shadow: 0px 10px 40px -5px rgba(89, 102, 132, 0.12);
-    border-radius: 8px;
+    margin-top: 180px;
+    border: 2px solid #fff;
+    border-radius: 9px;
+    background-color: #fff;
+    box-shadow: 1px 1px 3px 0 rgba(0,0,0,.2);
+    opacity: 1;
    
     @include mobile{
         margin-bottom: 0px;
+        margin-top: 100px;
     }
 }
 
