--- a/src/components/CitiesCard/styles.scss
+++ b/src/components/CitiesCard/styles.scss
@@ -30,7 +30,7 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 120%;
-    margin-bottom: 0;
+    margin-bottom: 4px;
     font-family: Poppins;
   }
 
