--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -66,12 +66,12 @@
 
   .logo {
     color: $white;
-    height: 55px;
-    width: 231px;
+    height: 32px;
+    width: 198px;
 
     @include mobile {
-      height: 36px;
-      width: 151px;
+      height: 30px;
+      width: 167px;
     }
   }
   .status-container {
@@ -80,7 +80,7 @@
 
   .status {
     position: absolute;
-    width: 86px;
+    width: 90px;
     height: 18px;
     margin-bottom: 0px;
     font-size: 12px;
@@ -94,6 +94,8 @@
     margin-left: 4px;
     right: 0px;
     justify-content: center;
+    padding-left:2px;
+    padding-right:2px;
 
     @include mobile {
       top: 33%;
@@ -212,11 +214,23 @@
   .navbar-collapse {
     z-index: 999;
   }
-
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  .dropdown-menu {
+    display: none;
+    position: absolute;
+    z-index: 1;
+  }
+  .dropdown:hover .dropdown-menu {
+    display: block;
+    position: absolute;
+  }
   .drop-down-items{
     position: absolute;
     width:185px;
-    height: 168px;
+    
     background-color: #fff;
     border: 1px solid rgba(104, 112, 134, 0.1);
     box-sizing: border-box;
@@ -225,7 +239,6 @@
     padding: 14px;
     margin-top: 12px;
     border-radius: 8px;
-    margin-left: 45px;
   }
   .cursor{
     cursor: pointer;
@@ -238,6 +251,7 @@
     margin-left: -13px;
     padding-left: 14px;
     padding-top: 7px;
+    cursor: pointer;
   }
   .go-to-links{
     font-family: 'Nunito',sans-serif;
