--- a/src/containers/TakeHomeChallange/styles.scss
+++ b/src/containers/TakeHomeChallange/styles.scss
@@ -48,6 +48,7 @@
         @include mobile{
           font-size: 32px;
           text-align: center;
+          margin-top: 15px;
         }
       }
     }
