--- a/src/components/AssignmentCompanies/styles.scss
+++ b/src/components/AssignmentCompanies/styles.scss
@@ -1,21 +1,27 @@
-
 @import '../../styles/variables/colors.scss';
 @import '../../styles/variables/mixins.scss';
 
-.assignment-list{
-    display: flex;
+.assignment-list {
+  display: flex;
   flex-direction: column;
   align-items: flex-start;
-    .list-body{
-    
-        display: flex;
-        flex-direction: row;
-    }
 
-    .company-names{
-        width: 150px;
-        height: 150px;
-        padding: 25px;
-    }
+  .list-body {
+    display: flex;
+    flex-direction: row;
+    border: 2px solid #f6f9fb;
+    border-radius: 9px;
+    background-color: #fff;
+    margin-bottom: 18px;
 
+    &:hover {
+      box-shadow: 0px 10px 40px -5px rgba(89, 102, 132, 0.12);
+    }
+  }
+
+  .company-names {
+    width: 150px;
+    height: 150px;
+    padding: 25px;
+  }
 }
