--- a/src/components/AssignmentDescription/styles.scss
+++ b/src/components/AssignmentDescription/styles.scss
@@ -1,42 +1,40 @@
-
 @import '../../styles/variables/colors.scss';
 @import '../../styles/variables/mixins.scss';
 
 .detail-banner-style {
-    
-    display: flex;
-    justify-content: center;
-    margin-top: 36px;
+  display: flex;
+  justify-content: center;
+  margin-top: 36px;
 
-    @include mobile {
-      padding: 0px 12px 64px 12px;
-    }
+  @include mobile {
+    padding: 0px 12px 64px 12px;
   }
-  .page-body{
+
+  .page-body {
     display: block;
     justify-content: center;
   }
-  .description-text{
-      width: 705px;
-      display: block;
+  .description-text {
+    width: 705px;
+    display: block;
 
-      @include mobile{
-          width: 100%;
-      }
+    @include mobile {
+      width: 100%;
+    }
   }
 
-  .company-name{
+  .company-name {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 36px;
     line-height: 54px;
-    color: #1E2432;
+    color: #1e2432;
     display: flex;
     justify-content: center;
     margin-top: 36px;
   }
-  .summary{    
+  .summary {
     font-family: Poppins;
     font-style: normal;
     font-weight: normal;
@@ -44,10 +42,10 @@
     line-height: 27px;
     letter-spacing: 5px;
     text-transform: uppercase;
-    color: #1E2432;
+    color: #1e2432;
     margin-top: 72px;
   }
-  .summary-text{
+  .summary-text {
     font-family: Nunito;
     font-style: normal;
     font-weight: normal;
@@ -56,8 +54,8 @@
     margin-top: 12px;
     color: #687086;
 
-    @include mobile{
-        font-size: 14px;
+    @include mobile {
+      font-size: 14px;
     }
   }
   .summary-para {
@@ -88,103 +86,30 @@
     }
   }
 
-
-
-  .sub-headings{
-    font-family: 'Poppins',sans-serif;
+  .sub-headings {
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
-    line-height: 27px;    
+    line-height: 27px;
     letter-spacing: 5px;
-    text-transform: uppercase;    
+    text-transform: uppercase;
     color: #687086;
     margin-top: 48px;
   }
-  .jobs-at{
-      font-family: 'Poppins', sans-serif;
-      font-style: normal;
-      font-weight: 600;
-      font-size: 18px;
-      line-height: 27px;
-      letter-spacing: 5px;
-      text-transform: uppercase;        
-      color: #687086;
-      margin-left: 120px;
-    }
-  .similar-jobs{
-      margin-left: 100px;
-      margin-top: 15px;
-      display: flex;
-      
-      @include mobile{
-          width: 30%;
-          margin-right: 5px;
-          margin-left: 5px;
-      }
-
-      .jobs-at{
-        font-family: 'Poppins', sans-serif;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 18px;
-        line-height: 27px;
-        letter-spacing: 5px;
-        text-transform: uppercase;        
-        color: #687086;
-        margin-top: 15px;
-      }
-      .position{
-        width: 233px;
-        height: 58px;
-        padding: 12px 18px;       
-        font-family: 'Poppins', sans-serif;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 24px;
-        line-height: 120%;
-        color: #1E2432;
-        
-      }
-      .job-details{
-        width: 350px;
-        height: 219px;        
-        background: #FFFFFF;
-        border: 1px solid rgba(104, 112, 134, 0.1);
-        box-sizing: border-box;
-        border-radius: 8px;
-      }
-
-      .job-description{
-          display: flex;   
-          color: #687086;
-          margin-left: 18px;     
-      }
-      .work-detail-icon{
-        margin-top: -13px;
-        width:12px;
-     }
-       .work-detail{
-            font-size:12px;
-            margin-top: 0px;
-            margin-left: 5px;
-    }
-        .apply-now{
-            width: 102px;
-            font-family: 'Nunito',sans-serif;
-            font-style: normal;
-            font-weight: 600;
-            font-size: 12px;
-            line-height: 100%;
-            color: #2D66FE;
-            border: 1px solid #2D66FE;
-            box-sizing: border-box;
-            border-radius: 4px;
-            margin-left: 18px;
-            padding: 10px 18px;
-
-    }
-    
+  .jobs-at {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    color: #687086;
+    padding-top: 48px;
   }
 
-  
+  .job-cards-style {
+    height: 250px;
+  }
+}
