--- a/src/components/Cards/styles.scss
+++ b/src/components/Cards/styles.scss
@@ -13,7 +13,7 @@
   box-sizing: border-box;
   height: 354px;
   border-radius: 8px;
-  padding: 11px 15px 21px 11px;
+  padding: 18px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -21,6 +21,9 @@
   .image-container {
     height: 100px;
     width: 100px;
+    border: 2px solid #f6f9fb;
+    border-radius: 9px;
+    background-color: #fff;
 
     .company-img {
       width: 100%;
