--- a/src/containers/EmailModule/styles.scss
+++ b/src/containers/EmailModule/styles.scss
@@ -4,7 +4,7 @@
 .email-page-style {
   height: 100vh;
 
-  .header-banner {
+  .header-banner-style {
     max-width: 1128px;
     display: block;
     margin: auto;
@@ -14,36 +14,35 @@
       padding: 0px 12px 20px 12px;
     }
   }
-  .body-card-description{
+  .body-card-description {
     display: flex;
     justify-content: center;
   }
-  .complete-header{
-    background-color:#32ACB1;
-  }
-  .position-title{
-    font-family: 'Poppins',sans-serif;
+
+  .position-title {
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 36px;
     line-height: 54px;
-    color: #1E2432;
+    color: #1e2432;
     display: flex;
     justify-content: center;
     margin-top: 100px;
   }
-  .job-detail{
-    font-family: 'Nunito',sans-serif;
+  .job-detail {
+    font-family: 'Nunito', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
     line-height: 100%;
     color: #687086;
-    background: #F7F9FB;
+    background: #f7f9fb;
     border-radius: 25px;
-    margin-right: 5px;
+    margin-right: 10px;
+    padding: 8px;
   }
-  .job-container{
+  .job-container {
     display: flex;
     padding: 5px;
     justify-content: center;
