--- a/src/containers/Home/styles.scss
+++ b/src/containers/Home/styles.scss
@@ -10,30 +10,23 @@
 .home-page-style {
   height: 100vh;
 
-  .all-page-style {
-    background-image: url('../../assets/images/Bg-Top.svg');
-    background-repeat: no-repeat;
-    background-size: contain;
-
-    @include mobile {
-      background-image: none;
-    }
+  .top-section {
+    background: #ebf0f3;
   }
   .header-banner-style {
     max-width: 1128px;
     display: block;
     margin: auto;
-    padding: 2px 0px 88px 0px;
 
     @include mobile {
-      padding: 0px 12px 64px 12px;
+      padding: 0px 12px 0px 12px;
     }
 
     .text-box {
       padding: 110px 0px 18px 0px;
 
       @include mobile {
-        padding: 78px 0px 18px 0px;
+        padding: 25px 0px 10px 0px;
       }
     }
 
@@ -48,32 +41,11 @@
       font-size: 46px;
       line-height: 130%;
       margin-bottom: 24px;
-      width: 65%;
 
       @include mobile {
         font-size: 26px;
         width: 100%;
-      }
-    }
-
-    .status-card {
-      color: white;
-      background: #01bcff;
-      width: 108px;
-      height: 27px;
-      margin-bottom: 0px;
-      font-size: 16px;
-      line-height: 18px;
-      font-family: 'Nunito', sans-serif;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      @include mobile {
-        font-size: 12px;
-        width: 78px;
-        height: 20px;
+        margin-bottom: 8px;
       }
     }
 
@@ -92,7 +64,7 @@
 
     .register-box {
       display: flex;
-      width: 53%;
+      width: 86%;
       justify-content: center;
       align-items: center;
       position: relative;
@@ -137,7 +109,7 @@
       width: 178px;
       height: 48px;
       position: absolute;
-      right: 18px;
+      right: 8px;
       background: $btn-color;
       color: white;
       border: none;
@@ -163,6 +135,56 @@
       line-height: 15px;
       font-weight: 400;
     }
+
+    .header-image-container {
+      background-image: url('../../assets/images/HomeHeader-bg.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      padding: 0;
+      padding-right: 15px;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
+
+      @include mobile {
+        background-size: cover;
+      }
+    }
+
+    .header-text-container {
+      padding: 2px 0px 110px 0px;
+
+      @include mobile {
+        padding: 2px 15px 10px 0px;
+      }
+    }
+
+    .header-image {
+      transform: translatey(0px);
+      animation: float 5s ease-in-out infinite;
+
+      @include mobile {
+        width: 100%;
+        margin-top: 30px;
+      }
+    }
+
+    @keyframes float {
+      0% {
+        transform: translatey(0px);
+      }
+      50% {
+        transform: translatey(-20px);
+      }
+      100% {
+        transform: translatey(0px);
+      }
+    }
+
+    .row {
+      margin-left: 0 !important;
+      margin-right: 0 !important;
+    }
   }
 
   .update-info-container {
@@ -182,17 +204,17 @@
     }
   }
 
-  .filters{
-    display:flex;
+  .filters {
+    display: flex;
     justify-content: space-between;
-    margin-bottom: 35px;
+    margin-bottom: 8px;
+
     @include mobile {
       display: block;
     }
   }
-  .filter-tab{
+  .filter-tab {
     padding-top: 150px;
-    
   }
   .job-post-section {
     background-image: url('../../assets/images/BackgroundMid.svg');
@@ -233,7 +255,7 @@
     font-size: 36px;
     line-height: 36px;
     color: $theme-primary;
-    margin-bottom: 0px;
+    margin-bottom: 8px;
 
     @include mobile {
       font-size: 24px;
@@ -265,7 +287,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 35px;
+    margin-bottom: 12px;
 
     @include mobile {
       flex-direction: column;
@@ -312,6 +334,11 @@
       @include mobile {
         font-size: 14px;
       }
+    }
+
+    .row {
+      margin-left: 0 !important;
+      margin-right: 0 !important;
     }
 
     .coming-soon {
@@ -421,7 +448,10 @@
 
     .cities-cards {
       margin-top: 0px;
+
+      @include mobile {
+        margin-bottom: 20px;
+      }
     }
   }
 }
-
