--- a/src/components/Tabs/styles.scss
+++ b/src/components/Tabs/styles.scss
@@ -9,7 +9,7 @@
   display: flex;
   background: #f7f9fb;
   border-radius: 36px;
-  width: 35%;
+  width: 350px;
   align-items: center;
   display: flex;
   padding: 0 8px;
