--- a/src/components/JobGuideCard/styles.scss
+++ b/src/components/JobGuideCard/styles.scss
@@ -10,7 +10,6 @@
 .job-guide-cards-style {
   background-color: $white;
   border-radius: 8px;
-  height: 330px;
   padding: 11px 15px 21px 11px;
   display: flex;
   flex-direction: column;
@@ -20,6 +19,14 @@
 
   @include mobile {
     margin: 0 12px;
+  }
+
+  .home-page-height{
+    height: 300px;
+  }
+
+  .Guides{
+    height: 370px;
   }
 
   .image-container {
