--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -187,6 +187,26 @@
       transition: 0.25s ease-in-out;
     }
 
+    .nav-icon1-with-bg span {
+      display: block;
+      position: absolute;
+      height: 3px;
+      width: 100%;
+      background: #fff;
+      border-radius: 9px;
+      opacity: 1;
+      left: 0;
+      -webkit-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+      -webkit-transition: 0.25s ease-in-out;
+      -moz-transition: 0.25s ease-in-out;
+      -o-transition: 0.25s ease-in-out;
+      transition: 0.25s ease-in-out;
+    }
+
+
     .nav-icon1 span:nth-child(1) {
       top: 0px;
     }
@@ -258,6 +278,7 @@
       font-size: 14px;
       line-height: 20px;
       color: #687086;
+      width: 160px;
     }
     .list-items:hover {
       background-color: #f7f9fb;
