--- a/src/containers/Home/styles.scss
+++ b/src/containers/Home/styles.scss
@@ -10,15 +10,9 @@
 .home-page-style {
   height: 100vh;
 
-  .top-section1 {
+  .top-section {
     background: #ebf0f3;
-  }
-  .top-section2 {
-    background: #ee7402;
-  }
-  .top-section3 {
-    background: #8ba5c7;
-  }
+   }
   .header-banner-style {
     max-width: 1128px;
     display: block;
@@ -54,9 +48,6 @@
         margin-bottom: 8px;
       }
 
-      &.is-white{
-        color: white;
-      }
     }
 
     .para {
@@ -71,9 +62,6 @@
         font-size: 14px;
       }
 
-      &.is-white{
-        color: white;
-      }
     }
 
     .register-box {
@@ -160,17 +148,22 @@
       align-items: flex-end;
       justify-content: center;
       background-size: cover;
-
+      transition: 0.5s;
       @include mobile {
-        background-size: cover;
+        background-size: contain;
       }
       &.header-image-container2{
-        background-image: url('../../assets/images/HomeHeader-bg2.svg');
+        background-image: url('../../assets/images/Image bg-3.svg');
         
+        @include mobile{
+          background-size: contain;
+        }
       }
       &.header-image-container3{
-        background-image: url('../../assets/images/HomeHeader-bg3.svg');
-        background-position-y: bottom ;
+        background-image: url('../../assets/images/Image bg-2.svg');
+        @include mobile{
+          background-size: contain;
+        }
       }
     }
 
@@ -233,6 +226,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 8px;
+    transition: 5s;
 
     @include mobile {
       display: block;
@@ -285,6 +279,7 @@
     .toggle-filter{
       margin-top: 60px;
       display: flex;
+      
     }
     .filter-button-flex{
       display: flex;
@@ -294,6 +289,7 @@
       border: 0.5px solid #2d66fe;
       border-radius: 4px;
       outline: none;
+      transition: 5s;
     }
   }
 
