--- a/src/containers/Home/styles.scss
+++ b/src/containers/Home/styles.scss
@@ -10,15 +10,10 @@
 .home-page-style {
   height: 100vh;
 
-  .top-section1 {
+  .top-section {
     background: #ebf0f3;
   }
-  .top-section2 {
-    background: #ee7402;
-  }
-  .top-section3 {
-    background: #8ba5c7;
-  }
+
   .header-banner-style {
     max-width: 1128px;
     display: block;
@@ -53,10 +48,6 @@
         width: 100%;
         margin-bottom: 8px;
       }
-
-      &.is-white{
-        color: white;
-      }
     }
 
     .para {
@@ -69,10 +60,6 @@
 
       @include mobile {
         font-size: 14px;
-      }
-
-      &.is-white{
-        color: white;
       }
     }
 
@@ -153,28 +140,22 @@
     .header-image-container {
       background-image: url('../../assets/images/HomeHeader-bg.svg');
       background-repeat: no-repeat;
-      background-position: center;
       padding: 0;
       padding-right: 15px;
       display: flex;
       align-items: flex-end;
       justify-content: center;
-      background-size: cover;
 
       @include mobile {
         background-size: cover;
       }
-      &.header-image-container2{
+      &.header-image-container2 {
         background-image: url('../../assets/images/HomeHeader-bg2.svg');
-        
       }
-      &.header-image-container3{
+      &.header-image-container3 {
         background-image: url('../../assets/images/HomeHeader-bg3.svg');
-        background-position-y: bottom ;
       }
     }
-
-    
 
     .header-text-container {
       padding: 2px 0px 110px 0px;
@@ -271,22 +252,22 @@
     .text-box {
       margin-bottom: 12px;
     }
-    .filter-icon{
-      width:10px;
-      height:10px;
+    .filter-icon {
+      width: 10px;
+      height: 10px;
       margin-top: 8px;
       margin-right: 6px;
       margin-left: 6px;
     }
-    .filter-text{
+    .filter-text {
       color: #2d66fe;
       margin-top: 2px;
     }
-    .toggle-filter{
+    .toggle-filter {
       margin-top: 60px;
       display: flex;
     }
-    .filter-button-flex{
+    .filter-button-flex {
       display: flex;
       width: 80px;
       height: 30px;
@@ -472,20 +453,19 @@
     }
   }
   //joblistedfrom
-  .listing-container{
+  .listing-container {
     width: 100%;
-    background: #F7F9FB;
-    
-  
-  .Job-listed-from-section{
-    padding: 10px 0px 10px 0px;
-    
-    .job-listed-container{
-      max-width: 1128px;
-      display: block;
-      margin: auto;
+    background: #f7f9fb;
+
+    .Job-listed-from-section {
+      padding: 10px 0px 10px 0px;
+
+      .job-listed-container {
+        max-width: 1128px;
+        display: block;
+        margin: auto;
+      }
     }
-  }
   }
   /*Cities Specific Job */
   .job-specific-cities-section {
