--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -101,6 +101,11 @@
 
       &.is-coloured {
         background: $white;
+
+        @include mobile {
+          background: #01bcff;
+          color: $white !important;
+        }
       }
 
       @include mobile {
@@ -155,7 +160,6 @@
     .nav-icon1 {
       width: 24px;
       height: 24px;
-      margin-top: -15px;
       position: relative;
       -webkit-transform: rotate(0deg);
       -moz-transform: rotate(0deg);
@@ -187,6 +191,10 @@
       transition: 0.25s ease-in-out;
     }
 
+    .coloured-bg span {
+      background: $white;
+    }
+
     .nav-icon1-with-bg span {
       display: block;
       position: absolute;
@@ -206,7 +214,6 @@
       transition: 0.25s ease-in-out;
     }
 
-
     .nav-icon1 span:nth-child(1) {
       top: 0px;
     }
@@ -220,7 +227,7 @@
     }
 
     .nav-icon1.open span:nth-child(1) {
-      top: 18px;
+      top: 12px;
       -webkit-transform: rotate(135deg);
       -moz-transform: rotate(135deg);
       -o-transform: rotate(135deg);
@@ -233,7 +240,7 @@
     }
 
     .nav-icon1.open span:nth-child(3) {
-      top: 18px;
+      top: 12px;
       -webkit-transform: rotate(-135deg);
       -moz-transform: rotate(-135deg);
       -o-transform: rotate(-135deg);
@@ -286,6 +293,10 @@
 
     .coloured-bg {
       color: $white;
+
+      @include mobile {
+        color: #687086;
+      }
     }
 
     .dropdown {
