--- a/src/containers/EmailModule/styles.scss
+++ b/src/containers/EmailModule/styles.scss
@@ -32,8 +32,6 @@
   }
   .job-detail {
     font-family: 'Nunito', sans-serif;
-    font-style: normal;
-    font-weight: normal;
     font-size: 12px;
     line-height: 100%;
     color: #687086;
@@ -63,6 +61,41 @@
       padding-top: 10px;
       font-size: 20px;
       margin-bottom: 0;
+    }
+  }
+
+  .fab-button-container {
+    position: absolute;
+    bottom: 47px;
+    right: 91px;
+
+    @include mobile {
+      bottom: 20px;
+      right: 18px;
+    }
+
+    .fab-button {
+      background: #2d66fe;
+      box-shadow: 0px 10px 40px -5px rgba(89, 102, 132, 0.12);
+      border-radius: 41px;
+      width: 192px;
+      height: 60px;
+      border: none;
+      color: $white;
+      font-size: 18px;
+      font-family: 'Nunito', sans-serif;
+      font-weight: 600;
+
+      &:focus {
+        outline: none;
+        border: none;
+      }
+
+      @include mobile {
+        width: 155px;
+        height: 48px;
+        font-size: 15px;
+      }
     }
   }
 }
