--- a/src/components/ReviewsBooks/styles.scss
+++ b/src/components/ReviewsBooks/styles.scss
@@ -20,7 +20,7 @@
     .mentor-icon{
         widows: 24px;
         height: 24px;
-        border-radius: 100px;
+        border-radius: 100%;
     }
 }
 
@@ -33,11 +33,31 @@
     color: #687086;
 }
 .all-recommendation{
-    background: transparent;
-    color: #2D66FE;
-    padding: 3px;
-    border: 1px solid #2D66FE;
-    border-radius: 4px;
-    font-size: 14px;
+    display: flex;
+                flex-direction: row;
+                align-items: flex-start;
+                width: 169px;
+                height: 32px;
+                background: #fff;
+                box-sizing: border-box;
+                border-radius: 4px;
+                margin-left: 12px;                
+                font-family: 'Nunito', sans-serif;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 12px;
+                line-height: 100%;
+                color: #2D66FE;               
+                margin: 25px 0px;
+                border: 0.5px solid rgba(104, 112, 134, 0.4);
+                box-sizing: border-box;
+                border-radius: 4px;
+                padding: 9px;
+                padding-left: 15px;
+
+                &:hover{
+                    background: #2D66FE;
+                    color: #fff;
+                }
 }
 }
