--- a/src/containers/BookMentors/styles.scss
+++ b/src/containers/BookMentors/styles.scss
@@ -16,7 +16,14 @@
     
         @include mobile {
           padding: 0px 12px 0px 12px;
-        }
+        }    
+}
+    .mentor-header-body{
+        margin-top: -15px;
+        margin-left: -5px;
+            @include mobile{
+                margin-left: 0px;
+            }
     
     .mentor-body{
         display: flex;
@@ -24,14 +31,27 @@
             display: block;
         }
 
+    .left-body-header {
+            max-width: 1128px;
+            display: block;
+            margin: auto;
+        
+            @include mobile {
+              padding: 0px 12px 0px 12px;
+            } 
+       
     .top-header-mentor{
-        width: 60%;
+        width: 100%;
         height: 338px;
         @include mobile{
             width: 100%;
             padding: 2px;
             margin-bottom: 20px;
         }
+    }
+    .header-container{
+        display: flex;
+        margin-bottom: 50px;
     }
     .breadcrumbs {
         font-family: 'Nunito', sans-serif;
@@ -52,12 +72,35 @@
         font-size: 46px;
         line-height: 130%;
         color: #1E2432;
-        margin-top: 80px;
+        margin-top: 60px;
         @include mobile{
             margin-top: 50px;
             font-size: 30px;
+            font-size: 26px;
+            line-height: 36px;
+            text-align: left;
+            margin-left: -180px; //wrong
         }
+        .mentor-detail{
+            display: flex;
+            .log-tag{
+                width: 12px;
+                height: 12px;
+            }
+            .logo-desc{
+                font-family: 'Nunito',sans-serif;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 14px;
+                line-height: 100%;
+                text-transform: capitalize;
+                color: #687086;
+                margin-top: 13px;
+                margin-left: 12px;
+            }
     }
+    }
+    
     .header-desc{                
         font-family: 'Nunito',sans-serif;
         font-style: normal;
@@ -84,12 +127,18 @@
     }
     .social-media{
         display: flex;
-    
+        margin-left: -20px ; //wrong
+    .logo-container{        
+        background: #FFFFFF;
+        box-shadow: 0px 10px 40px -5px rgba(89, 102, 132, 0.3);
+        border-radius: 29px;
+    }
     .logos{
-        width: 18px;
-        height: 14.63px;
-        margin-right: 27px;
+        width: 120px;
+        height: 120px;
+        margin-left: -30px; //wrong
     }}
+    }
     .button-recommendations{
         font-family: 'Nunito', sans-serif;
         font-style: normal;
@@ -110,27 +159,29 @@
         }
     }
     .image-books{
-        background: #ebf0f3;
+        background: url('../../assets/images/BG.svg');
+        background-repeat: no-repeat;
         margin-top: 40px;
-        width: 430px;
-        height: 290px;
+        width: 540px;
+        height: 481px;
         @include mobile{
             margin-top: 20px;
             width: 98%;
-            height: 330px;
+            height: 110px;
+            background: #fff;
         }
     }
     .book-shelf-image{
         width: 298px;
-        height: 208px;
-        margin-top: 25px;
-        border-radius: 100px;
-        margin-left: 65px;
+        height: 298px;
+        margin-top: 93px;
+        border-radius: 100%;
+        margin-left: 100px;
 
         @include mobile{
-            margin-left: -30px;
-            width: 400px;
-            height: 290px;
+            margin-left: 12px;
+            width: 120px;
+            height: 120px;
             margin-top: 10px;
         }
     }
@@ -139,9 +190,15 @@
         align-items: center;
         justify-content: center;
         display: flex;
-        margin-top: -20px;
+        margin-top: -15px;
+        margin-left: -37px;
         @include mobile{
-            margin-top: -30px;
+            margin-top: -20px;
+            align-self: flex-start;
+            align-items: flex-start;
+            justify-content: flex-start;
+            display: flex;
+            margin-left: 30px;
         }
     }
     .mentor-tag{
@@ -160,8 +217,14 @@
         align-items: center;
         justify-content: center;
         display: flex;
+        @include mobile{
+            width: 83px;
+            height: 40px;
+            font-size: 14px;            
+        }
     }
    }
+
 }
     .books-by-mentor{
         padding: 110px 0px 20px 0px;
@@ -202,6 +265,7 @@
         }
     }
     
+    
 
   }
   .crousal-title{
@@ -213,5 +277,84 @@
     color: #1E2432;
     margin-top: 110px;
   }
+  .images-list-expert{
+    display: flex;
+    width:350px;
+    height: 466px;
+
+    .text-appear{
+        display: none;                                
+        font-family: 'Nunito',sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 120%;
+        color: #FFFFFF;
+        flex: none;
+        order: 1;
+        flex-grow: 0;
+        width: 310px;
+        text-align: left;
+        margin-left: 12px;
+        margin-bottom: 10px;
+    }
+  .images{
+    background-size: cover;
+    width:350px;
+    height: 466px;
+    border-radius: 12px;
+    margin-right: 5px;
+    margin-bottom: 37px;
+    @include mobile{
+        width: 300px;
+        height: 400px;
+    }
+
+    &:hover{
+        box-shadow: 0px 10px 40px -5px rgba(48, 49, 53, 0.12);
+        .text-appear{
+            display: block;
+        }
+        .expert-name{
+            margin-top: 310px;
+            @include mobile{
+                margin-top: 280px;
+            }
+        }
+    }
+}
+.expert-name{
+    text-align: left;
+    margin-left: 12px;
+    margin-top: 400px;//wrong
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 100%;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    @include mobile{
+        margin-top: 320px;
+    }
+}
+.content-desc{
+    font-family: 'Nunito', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 90%;
+    color: #FFFFFF;
+    flex: none;
+    order: 1;
+    text-align: left;
+    margin-left: 12px;
+    margin-top: -3px;
+}        
+
+}
+  
     
 }
