--- a/src/containers/CuratedBookshelf/styles.scss
+++ b/src/containers/CuratedBookshelf/styles.scss
@@ -16,23 +16,224 @@
     
         @include mobile {
           padding: 0px 12px 0px 12px;
-        }
-    
+        }    
     
   }
-  .header-complete-body{
+  
+
+  .recommended-by{
+        padding: 110px 0px 20px 0px;
+        @include mobile{
+            padding: 20px 0px 20px 0px;
+        }
+        .list-container {
+          max-width: 1128px;
+          display: block;
+          margin: auto;
+        }
+
+        .text-recommended{
+            font-family: Poppins;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 54px;
+            color: #1E2432;
+            margin-bottom: 49px;
+            @include mobile{
+                font-size: 18px;
+                line-height: 27px;
+                margin-left: 12px;
+                margin-bottom: 20px;
+            }
+        }
+        .images-list-expert{
+            display: flex;
+            @include mobile{
+                margin-left: 12px;
+            }
+        .images{
+            // background-image: url('../../assets/images/test.svg');
+            // background-repeat: no-repeat;
+            background-size: cover;
+            width:350px;
+            height: 466px;
+            border-radius: 12px;
+            margin-bottom: 37px;
+            margin-right: 20px;
+
+            @include mobile{
+                width: 162px;
+                height: 204px;
+                margin-right: 0px;
+                margin-bottom: 13px;
+            }
+
+            &:hover{
+                box-shadow: 0px 10px 40px -5px rgba(48, 49, 53, 0.12);
+                .text-appear{
+                    display: block;
+                }
+                .expert-name{
+                    margin-top: 280px;
+                    @include mobile{
+                        margin-top: 20px;
+                    }
+                }
+            }
+        }
+        
+        .mentor-details{
+            // background: linear-gradient(180deg, rgba(0, 0, 0, 0) 72.64%, #000000 100%);
+            // border-radius: 12px;
+            margin-bottom: 10px;
+            .text-appear{
+                display: none;                                
+                font-family: 'Nunito',sans-serif;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 14px;
+                line-height: 120%;
+                color: #FFFFFF;
+                flex: none;
+                order: 1;
+                flex-grow: 0;
+                width: 310px;
+                text-align: left;
+                margin-left: 12px;
+                margin-bottom: 10px;                
+            }
+            .expert-name{
+                text-align: left;
+                margin-left: 12px;
+                margin-top: 405px;//wrong
+                color: #fff;
+                font-family: 'Poppins', sans-serif;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 24px;
+                line-height: 100%;
+                flex: none;
+                order: 0;
+                flex-grow: 0;
+                @include mobile{
+                    margin-top: 130px;
+                    font-size: 16px;
+                    line-height: 120%;
+                }
+            }
+
+            .content-desc{
+                font-family: 'Nunito', sans-serif;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 14px;
+                line-height: 90%;
+                color: #FFFFFF;
+                flex: none;
+                order: 1;
+                text-align: left;
+                margin-left: 12px;
+                margin-top: -7px;
+                @include mobile{
+                    font-size: 14px;
+                    line-height: 100%;
+                }
+            }    
+      }    
+    }
+
+    .load-more-btn-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    
+    .load-more {
+        width: 379px;
+        height: 38px;
+        background: #f7f9fb;
+        border-radius: 4px;
+        display: flex;
+        font-family: 'Nunito', sans-serif;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 100%;
+        color: #2d66fe;
+        border: none;
+        margin-top: 48px;
+        overscroll-behavior: auto;
+    
+        &:focus {
+          outline: none;
+        }
+        @include mobile{
+            width: 200px;
+        }
+      }
+    
+    .crousal-title{
+        font-family: 'Poppins',sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 36px;
+        line-height: 54px;
+        color: #1E2432;
+        margin-top: 110px;
+        @include mobile{
+            margin-top: 20px;
+            font-size: 18px;
+            margin-left: 12px;
+        }
+    }
+    .crousal{
+        @include mobile{
+            margin-left: 20px;
+        }  flex-direction: row;
+    }
+    
+    .book-container-mobile{
+        display: flex;
+        flex-direction: row;
+        overflow-x: scroll;
+    }
+    
+      }
+
+      .below-header{
+          margin-top: -15px;
+          margin-left: -75px;
+          @include mobile{
+              margin-left: 0px;
+          }
+      .header-complete-body{
         display: flex;
         @include mobile{
             display: block;
         }
-
+        .left-body-header {
+            max-width: 1128px;
+            display: block;
+            margin: auto;
+        
+            @include mobile {
+              padding: 0px 12px 0px 12px;
+            }    
+        
+        
     .top-header-body{
-        width: 60%;
+        width: 100%;
         height: 338px;
+        background: #fff;
+
         @include mobile{
             width: 100%;
             padding: 2px;
             margin-bottom: 20px;
+            height: 240px;
         }
     }
     .breadcrumbs {
@@ -59,8 +260,11 @@
         display: block;
 
         @include mobile{
-            width:99%;
+            width: 351px;
+            height: 72px;
             margin-top: 50px;
+            font-size: 26px;
+            line-height: 36px;
         }
     }
     .header-desc{                
@@ -71,6 +275,12 @@
         line-height: 27px;
         color: #687086;
         margin-bottom: 30px;
+        @include mobile{
+            margin-top: 35px;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 20px;
+        }
     }
     .button-recommendations{
         font-family: 'Nunito', sans-serif;
@@ -88,152 +298,69 @@
         box-sizing: border-box;
         border-radius: 4px;
         padding: 7px;
+        padding-left: 20px;
+        padding-right: 20px;
         &:hover{
             background: #2D66FE;
             color: #fff;
         }
+    }}
+    .back-container{
+        margin-left: 12px;
+        display: flex;
+    .back-button-book{
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 150%;
+        letter-spacing: 0.01em;
+        color: #1E2432;
     }
+    .back-button{
+        width:15px;
+        height:15px;
+        margin-right:12px;
+        margin-top: 15px;
+    }
+    .resources{
+        font-family: 'Poppins', sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 10px;
+        line-height: 150%;
+        letter-spacing: 0.01em;
+        color: #1E2432;
+        margin-top: -10px;
+    }
+}
     .image-books{
-        background: #ebf0f3;
+        background: url('../../assets/images/BG.svg');
+        background-repeat: no-repeat;
         margin-top: 40px;
-
+        width: 640;
+        height: 481px;
+        
         @include mobile{
-            margin-top: 60px;
+            margin-top: 10px;
+            width: 100%;
+            height: 216px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     }
     .book-shelf-image{
-        width: 450px;
-        height: 330px;
+        width: 569px;
+        height: 438px;
         margin-top: 25px;
+        margin-left: -45px;
         @include mobile{
-            margin-left: -30px;
-            width: 400px;
-            height: 290px;
-        }
-    }
-   }
-
-  .recommended-by{
-        padding: 110px 0px 20px 0px;
-        @include mobile{
-            padding: 20px 0px 20px 0px;
-        }
-        .list-container {
-          max-width: 1128px;
-          display: block;
-          margin: auto;
-        }
-
-        .text-recommended{
-            font-family: Poppins;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 36px;
-            line-height: 54px;
-            color: #1E2432;
-
-            @include mobile{
-                font-size: 18px;
-                line-height: 27px;
-                margin-left: 12px;
-            }
-        }
-        .images-list-expert{
-            display: flex;
+            width: 268.35px;
+            height: 206.57px;
+            margin-left: 10px;
             
-            .text-appear{
-                display: none;                                
-                font-family: 'Nunito',sans-serif;
-                font-style: normal;
-                font-weight: normal;
-                font-size: 14px;
-                line-height: 120%;
-                color: #FFFFFF;
-                flex: none;
-                order: 1;
-                flex-grow: 0;
-                width: 310px;
-                text-align: left;
-                margin-left: 12px;
-                margin-bottom: 10px;
-            }
-        .images{
-            background-image: url('../../assets/images/test.svg');
-            background-repeat: no-repeat;
-            width:350px;
-            height: 466px;
-            border-radius: 12px;
-            margin-left: 25px;
-            margin-bottom: 37px;
-            @include mobile{
-                width: 300px;
-                height: 400px;
-            }
-
-            &:hover{
-                box-shadow: 0px 10px 40px -5px rgba(48, 49, 53, 0.12);
-                .text-appear{
-                    display: block;
-                }
-                .expert-name{
-                    margin-top: 310px;
-                    @include mobile{
-                        margin-top: 280px;
-                    }
-                }
-            }
-        }
-        .expert-name{
-            text-align: left;
-            margin-left: 12px;
-            margin-top: 400px;//wrong
-            color: #fff;
-            font-family: 'Poppins', sans-serif;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 24px;
-            line-height: 100%;
-            flex: none;
-            order: 0;
-            flex-grow: 0;
-            @include mobile{
-                margin-top: 320px;
-            }
-        }
-        .content-desc{
-            font-family: 'Nunito', sans-serif;
-            font-style: normal;
-            font-weight: 600;
-            font-size: 14px;
-            line-height: 90%;
-            color: #FFFFFF;
-            flex: none;
-            order: 1;
-            text-align: left;
-            margin-left: 12px;
-            margin-top: -3px;
-        }        
-    }
-    
-    .crousal-title{
-        font-family: 'Poppins',sans-serif;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 36px;
-        line-height: 54px;
-        color: #1E2432;
-        margin-top: 110px;
-        @include mobile{
-            margin-top: 20px;
-            font-size: 18px;
-            margin-left: 12px;
         }
     }
-    .crousal{
-        @include mobile{
-            margin-left: 20px;
-        }
-    }
-    
-      }
+   }}
 }
