--- a/src/containers/LearnMoreBooks/styles.scss
+++ b/src/containers/LearnMoreBooks/styles.scss
@@ -17,15 +17,31 @@
         @include mobile {
           padding: 0px 12px 0px 12px;
         }
-    
+
+}
+
+  .book-page-body{
+    margin-top: -15px;
+    margin-left: -25px;
+    @include mobile{
+        margin-left: 0px;
+    }
+          
     .books-container-body{
         display: flex;
         @include mobile{
             display: block;
         }
-
+    .left-header-body{
+            max-width: 1128px;
+            display: block;
+            margin: auto;
+        
+            @include mobile {
+              padding: 0px 12px 0px 12px;
+            } 
     .top-header-books{
-        width: 60%;
+        width: 100%;
         height: 338px;
         @include mobile{
             width: 100%;
@@ -40,12 +56,25 @@
         font-size: 46px;
         line-height: 130%;
         color: #1E2432;
-        margin-top: 80px;
+        margin-top: 60px;
+        width: 500px;
         @include mobile{
             margin-top: 50px;
             font-size: 30px ;
         }
     }
+    .breadcrumbs {
+        font-family: 'Nunito', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 100%;
+        color: $theme-secondary;
+        margin-right: 4px;
+      }
+      .breadcrumbs-body {
+        display: flex;
+      }
     .header-desc{                
         font-family: 'Nunito',sans-serif;
         font-style: normal;
@@ -69,6 +98,7 @@
 
     }.ratings{
         display: flex;
+        
     }
     .stars-reviews{
         margin-top: -8px;
@@ -89,24 +119,24 @@
         }
     }
     .buy-now{        
-        font-family: 'Nunito',sans-serif;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 12px;
-        line-height: 100%;
-        color: #FFFFFF;
-        flex: none;
-        order: 0;
-        flex-grow: 0;
-        margin: 10px 0px;
-        color: #fff;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        width: 83px;
+        height: 32px;
         background: #2D66FE;
+        color: #fff;
+        box-sizing: border-box;
         border-radius: 4px;
-        padding: 10px;
+        padding-left: 14px;
+        padding-top: 5px;
+        margin-left: 0px;            
         @include mobile{
             margin-top: 20px;
         }
     }
+    .recommend-container{
+        display: flex;
     .recommended-by{
         margin-top: 20px;
         font-family: 'Nunito', sans-serif;
@@ -114,14 +144,22 @@
         font-weight: normal;
         font-size: 20px;
         line-height: 27px;
-
         color: #687086;
     }
+    .mentor-icon{
+        width: 24px;
+        height: 24px;
+        border-radius: 100%;
+        margin-left: 12px;
+        margin-top: 22px;
+    }
+}
     .recommendation{
         margin-top: 12px;
         display: flex;
         justify-content: space-evenly;
     }
+}
        
     .mentor-image{
         width: 20px;
@@ -129,10 +167,11 @@
        }
     
     .image-books{
-        background: #ebf0f3;
+        background: url('../../assets/images/BG.svg');
+        background-repeat: no-repeat;
         margin-top: 40px;
-        width: 430px;
-        height: 410px;
+        width: 540px;
+        height: 481px;
         @include mobile{
             margin-top: 180px;
             width: 100%;
@@ -140,10 +179,10 @@
         }
     }
     .book-shelf-image{
-        width: 233px;
-        height: 345px;
-        margin-top: 32px;
-        margin-left: 95px;
+        width: 263px;
+        height: 394px;
+        margin-top: 43px;
+        margin-left: 117px;
 
         @include mobile{  
             margin-left: 75px;          
@@ -154,7 +193,15 @@
     }
    
    }
-}
+  }
+  .recommended-body{
+    max-width: 1128px;
+    display: block;
+    margin: auto;
+
+    @include mobile {
+      padding: 0px 12px 0px 12px;
+    }
     .review-comments{
         margin-top: 110px;
         @include mobile{
@@ -178,5 +225,6 @@
             margin-top: 20px;
         }
     }
+  }
 
 }
