--- a/src/components/JobGuideCard/styles.scss
+++ b/src/components/JobGuideCard/styles.scss
@@ -43,6 +43,7 @@
 
   .heading {
     max-width: 322px;
+    height: 60px;
     font-family: Poppins;
     font-style: normal;
     font-weight: bold;
