--- a/src/containers/Home/styles.scss
+++ b/src/containers/Home/styles.scss
@@ -249,7 +249,7 @@
 
     @include mobile {
       background-image: none;
-      padding: 48px 12px 60px 12px;
+      padding: 90px 12px 60px 12px;
     }
   }
 
@@ -265,6 +265,7 @@
     .text-box {
       margin-bottom: 12px;
     }
+
     .filter-icon {
       width: 10px;
       height: 10px;
@@ -272,10 +273,12 @@
       margin-right: 6px;
       margin-left: 6px;
     }
+
     .filter-text {
       color: #2d66fe;
       margin-top: 2px;
     }
+
     .toggle-filter {
       margin-top: 60px;
       display: flex;
@@ -284,6 +287,7 @@
         margin-top: 0px;
       }
     }
+
     .filter-button-flex {
       display: flex;
       width: 80px;
@@ -294,9 +298,40 @@
       outline: none;
       transition: 5s;
     }
+
+    &.top-startup {
+      box-shadow: 0px 10px 40px -5px rgba(89, 102, 132, 0.12);
+      border-radius: 12px;
+      padding-left: 32px;
+
+      @include mobile {
+        padding: 12px;
+        margin: 12px;
+      }
+    }
+
+    .startUp-image {
+      float: right;
+
+      @include mobile {
+        float: none;
+        width: 100%;
+      }
+    }
+
+    .start-up-text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      //align-items: center;
+    }
+
+    .opening-btn {
+      margin-top: 18px;
+    }
   }
 
-  .post-heading {
+  .section-title {
     font-family: Poppins;
     font-style: normal;
     font-weight: 700;
@@ -311,7 +346,7 @@
     }
   }
 
-  .post-info-para {
+  .section-sub-title {
     font-family: 'Nunito', sans-serif;
     color: $theme-secondary;
     font-style: normal;
@@ -488,7 +523,7 @@
   }
   /*Cities Specific Job */
   .job-specific-cities-section {
-    padding: 123px 0px 20px 0px;
+    padding: 110px 0px 20px 0px;
 
     .cards-container {
       max-width: 1128px;
